forgot to save sln

--- a/src/ABsoluteMaybe/ABsoluteMaybe.csproj
+++ b/src/ABsoluteMaybe/ABsoluteMaybe.csproj
@@ -46,6 +46,7 @@
     <Compile Include="IABsoluteMaybe.cs" />
     <Compile Include="IUserIdentificationStrategy.cs" />
     <Compile Include="ITestsRepository.cs" />
+    <Compile Include="ParticipationRecord.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
