Expirement now able to calculate some basic aggregations on the fly.

--- a/src/AbsoluteMaybe.Tests/AbsoluteMaybe.Tests.csproj
+++ b/src/AbsoluteMaybe.Tests/AbsoluteMaybe.Tests.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Domain\ExpirementTests.cs" />
     <Compile Include="Persistence\XmlExpirementRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
