--- a/src/AbsoluteMaybe.Tests/AbsoluteMaybe.Tests.csproj
+++ b/src/AbsoluteMaybe.Tests/AbsoluteMaybe.Tests.csproj
@@ -49,8 +49,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Domain\ExpirementTests.cs" />
-    <Compile Include="Persistence\XmlExpirementRepositoryTests.cs" />
+    <Compile Include="Domain\ExperimentTests.cs" />
+    <Compile Include="Persistence\XmlExperimentRepositoryTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Statistics\ABsoluteMaybeStatisticsTests.cs" />
   </ItemGroup>
