Added some basic examples of experiments to the Home.Index action & view.

--- a/src/ABsoluteMaybe.SampleWebsite.MVC2/ABsoluteMaybe.SampleWebsite.MVC2.csproj
+++ b/src/ABsoluteMaybe.SampleWebsite.MVC2/ABsoluteMaybe.SampleWebsite.MVC2.csproj
@@ -78,7 +78,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\ABsoluteMaybe.xml" />
+    <Content Include="Areas\ABsoluteMaybeDashboard\Views\Dashboard\Index.aspx" />
     <Content Include="Global.asax" />
+    <Content Include="Views\Home\ShoppingCart.aspx" />
+    <Content Include="Views\Home\ThankYou.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -103,7 +106,6 @@
     <Content Include="Views\Account\ChangePasswordSuccess.aspx" />
     <Content Include="Views\Account\LogOn.aspx" />
     <Content Include="Views\Account\Register.aspx" />
-    <Content Include="Views\Home\About.aspx" />
     <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Shared\Error.aspx" />
     <Content Include="Views\Shared\LogOnUserControl.ascx" />
