--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,8 @@ _ReSharper*
 .DS_Store
 *.sdf
 TestResult.xml
+packaging/ABsoluteMaybe/*.nupkg
+packaging/ABsoluteMaybe/lib/*
+packaging/ABsoluteMaybe.Mvc/*.nupkg
+packaging/ABsoluteMaybe.Mvc/lib/*
+packaging/ABsoluteMaybe.Mvc/content/*
