--- a/packaging/ABsoluteMaybe.Mvc/ABsoluteMaybe.Mvc.nuspec
+++ b/packaging/ABsoluteMaybe.Mvc/ABsoluteMaybe.Mvc.nuspec
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
-    <id>EngageNet.Mvc</id>
+    <id>ABsoluteMaybe.Mvc</id>
     <version>1.0.0.0</version>
-    <authors>Troy Goode, Steven Burman</authors>
-    <projectUrl>http://github.com/TroyGoode/EngageNet</projectUrl>
-    <description><![CDATA[Asp.Net MVC helpers and example impelmentation for the EngageNet library.]]></description>
+    <authors>Troy Goode</authors>
+    <projectUrl>http://github.com/TroyGoode/ABsoluteMaybe</projectUrl>
+    <description><![CDATA[Dashboard for viewing experiments created by ABsoluteMaybe.]]></description>
     <language>en-US</language>
     <dependencies>
-    	<dependency id="EngageNet" minVersion="1.0" />
+    	<dependency id="ABsoluteMaybe" minVersion="1.0" />
     </dependencies>
   </metadata>
 </package>
