--- a/packaging/ABsoluteMaybe/ABsoluteMaybe.nuspec
+++ b/packaging/ABsoluteMaybe/ABsoluteMaybe.nuspec
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
-    <id>EngageNet</id>
+    <id>ABsoluteMaybe</id>
     <version>1.0.0.0</version>
-    <authors>Troy Goode, Steven Burman</authors>
-    <projectUrl>http://github.com/TroyGoode/EngageNet</projectUrl>
-    <description><![CDATA[A wrapper library for the JanRain Engage (formerly RPX) authentication service.]]></description>
+    <authors>Troy Goode</authors>
+    <projectUrl>http://github.com/TroyGoode/ABsoluteMaybe</projectUrl>
+    <description><![CDATA[A/B testing for ASP.Net MVC]]></description>
     <language>en-US</language>
   </metadata>
 </package>
