--- a/src/ABsoluteMaybe/ABsoluteMaybe.csproj
+++ b/src/ABsoluteMaybe/ABsoluteMaybe.csproj
@@ -59,6 +59,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\IOptionSerializer.cs" />
     <Compile Include="Serialization\ToStringOptionSerializer.cs" />
+    <Compile Include="ShortCircuiting\EndedExperimentShortCircuiter.cs" />
+    <Compile Include="ShortCircuiting\IShortCircuiter.cs" />
+    <Compile Include="ShortCircuiting\ShortCircuitResult.cs" />
     <Compile Include="Statistics\ABingoStyleFormatter.cs" />
     <Compile Include="Statistics\ABsoluteMaybeStatistics.cs" />
     <Compile Include="Statistics\PValue.cs" />
